[package]
name = "ckb-fake-env"
version = "0.1.0"
authors = ["rink1969 <rink1969@cryptape.com>"]
edition = "2018"

[dependencies]
jsonrpc-client-core = "~0.4"
jsonrpc-client-http = "~0.4"
numext-fixed-hash = { version = "0.1", features = ["support_rand", "support_heapsize", "support_serde"] }
numext-fixed-uint = { version = "0.1", features = ["support_rand", "support_heapsize", "support_serde"] }
jsonrpc-types = { git = "https://github.com/rink1969/ckb.git", branch = "rc0.10" }
ckb-core = { git = "https://github.com/rink1969/ckb.git", branch = "rc0.10" }
ckb-script = { git = "https://github.com/rink1969/ckb.git", branch = "rc0.10" }
ckb-protocol = { git = "https://github.com/rink1969/ckb.git", branch = "rc0.10" }
flatbuffers = "0.5.0"
byteorder = "1.3.1"